--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,54 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap");
+@font-face {
+  font-family: "THICCCBOI-Black";
+  src: url("./fonts/THICCCBOI-Black.ttf");
+}
+@font-face {
+  font-family: "THICCCBOI-Bold";
+  src: url("./fonts/THICCCBOI-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "THICCCBOI-ExtraBold";
+  src: url("./fonts/THICCCBOI-ExtraBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "THICCCBOI-Medium";
+  src: url("./fonts/THICCCBOI-Medium.ttf") format("truetype");
+}
+@font-face {
+  font-family: "THICCCBOI-Regular";
+  src: url("./fonts/THICCCBOI-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "THICCCBOI-SemiBold";
+  src: url("./fonts/THICCCBOI-SemiBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "THICCCBOI-ThicccAF";
+  src: url("./fonts/THICCCBOI-ThicccAF.ttf") format("truetype");
+}
 
 :root {
   --app-gray-100: #e5e5e5;
+  --app-gray-200: #AEACB8;
   --app-grey-100: #f4f4f4;
+  --app-grey-200: #9693A2;
   --app-black-100: #424141;
   --app-black-400: #0e040c;
-  --app-blue-100: #55ceff;
+  --app-black-500: #13111A;
+  --app-blue-100: #F2F8FF;
+  --app-blue-200: #D6EDFF;
+  --app-blue-300: #55ceff;
   --app-blue-400: #1792ff;
+  --app-blue-500: #0D6ECC;
+  --app-blue-600: #054D99;
   --app-green-400: #0f6664;
   --app-white: #ffffff;
-  --app-primary-font: "Josefin Sans", "sans-serif";
-  --app-border-radius-sm: 10px;
-  --app-border-radius-md: 20.9836px;
+  --app-primary-font: "THICCCBOI-Regular", "sans-serif";
+  --app-primary-font-bold: "THICCCBOI-Bold", "sans-serif";
+  --app-border-radius-sm: 6px;
+  --app-border-radius-md: 21px;
 }
-
+-
 html,
 body {
   padding: 0;
