--- a/components/Shared/Tag/styles.module.css
+++ b/components/Shared/Tag/styles.module.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: var(--app-primary-font-bold);
 }
 
 .container.primary {
