--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,7 @@
   --app-blue-400: #1792ff;
   --app-blue-500: #0D6ECC;
   --app-blue-600: #054D99;
+  --app-blue-700: #003066;
   --app-green-400: #0f6664;
   --app-white: #ffffff;
   --app-primary-font: "THICCCBOI-Regular", "sans-serif";
