--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,8 @@
   --app-blue-600: #054D99;
   --app-blue-700: #003066;
   --app-green-400: #0f6664;
+  --app-green-500: #006655;
+  --app-red-500: #CC154A;
   --app-white: #ffffff;
   --app-primary-font: "THICCCBOI-Regular", "sans-serif";
   --app-primary-font-bold: "THICCCBOI-Bold", "sans-serif";
