--- a/components/Shared/Input/styles.module.css
+++ b/components/Shared/Input/styles.module.css
@@ -5,10 +5,12 @@
 .container input {
 	width: 100%;
 	background-color: var(--app-white);
-	border: 1.5px solid #676376;
-	border-radius: 6px;
-	height: 40px;
-	padding: 12px 12px 12px 30px;
+	border-radius: var(--app-border-radius-sm);
+	height: 48px;
+	padding: 12px 16px;
+	font-size: 0.875rem;
+	/* margin-bottom: 3px; */
+	/* min-height: 46px; */
 }
 
 .container input::placeholder {
