--- a/components/SignIn/styles.module.css
+++ b/components/SignIn/styles.module.css
@@ -23,6 +23,15 @@
     line-height: 16px;
 }
 
+.login-container input {
+    width: 100% !important;
+    background-color: var(--app-white) !important;
+    border: 1.5px solid #676376 !important;
+    border-radius: 6px !important;
+    height: 40px !important;
+    padding: 12px 12px 12px 30px !important;
+}
+
 @media all and (min-width: 768px) {
     .login-container form {
         width: 59.72%;
