--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -128,6 +128,18 @@
   font-weight: 800;
 }
 
+.container .programs-container > div > div:last-child > svg:first-child {
+  position: absolute;
+  right: 50px;
+  top: -75px;
+}
+
+.container .programs-container > div > div:last-child > svg:nth-child(2) {
+  position: absolute;
+  right: 8px;
+  top: 10px;
+}
+
 .container .tutorials-sample-container {
   overflow-x: hidden;
 }
@@ -200,6 +212,18 @@
   .container .banner button {
     font-size: 16px;
     transform: none;
+  }
+
+  .container .programs-container > div > div:last-child > svg:first-child {
+    position: absolute;
+    right: 150px;
+    top: -80px;
+  }
+
+  .container .programs-container > div > div:last-child > svg:nth-child(2) {
+    position: absolute;
+    right: 78px;
+    top: 24px;
   }
 
   .container .subscribe form .subscribe-input {
