--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -141,7 +141,7 @@
 }
 
 .container .tutorials-sample-container {
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 .container .tutorials-sample > div:nth-child(2) {
@@ -205,7 +205,7 @@
   .container .banner {
   }
 
-  .container .banner > div:first-child {
+  .container .banner > div {
     width: 50%;
   }
 
