--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -15,7 +15,7 @@
   background: #FFFFFF;
   box-shadow: 0px 4px 12px -4px rgba(22, 34, 51, 0.12), 0px 16px 32px rgba(22, 34, 51, 0.16);
   border-radius: 5px;
-  padding: 23px 25px;
+  padding: 23px 20px;
 }
 
 .bigNav .dropdown .dropdown-content .dropdown-item {
@@ -25,13 +25,23 @@
   display: flex;
   align-items: center;
   justify-content: flex-start !important;
-  padding: 12px 14px;
+  padding: 8px 3px;
 }
 
-.bigNav .dropdown .dropdown-content .dropdown-item:hover {
-  background: #D6EDFF;
+.bigNav .dropdown.programs-dropdown .dropdown-content .dropdown-item small {
+  font-size: 11px!important;
+}
+
+.bigNav .dropdown .dropdown-content .dropdown-item:hover, .bigNav .dropdown .dropdown-content .dropdown-item:active {
+  background: #D6EDFF !important;
   border-radius: 6px;
-  color: #0D6ECC;
+  color: #0D6ECC !important;
+}
+
+.bigNav .dropdown.programs-dropdown .dropdown-content .dropdown-item:hover:last-child,
+.bigNav .dropdown.programs-dropdown .dropdown-content .dropdown-item:active:last-child{
+  background: none !important;
+  color: initial !important;
 }
 
 .bigNav .dropdown .dropdown-content .dropdown-item:hover svg path {
