--- a/components/Tutorials/Detail/styles.module.css
+++ b/components/Tutorials/Detail/styles.module.css
@@ -32,6 +32,13 @@
   font-weight: 400;
 }
 
+.container ul, .container ol, .container li {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  list-style-type: disc;
+}
+
 .container span.sub-text {
   color: var(--app-grey-200);
 }
